--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -1,41 +1,20 @@
-.video-container {
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #000;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-}
+    align-items: center;
+  }
 
-.video-container .video {
-    height: 25rem;
-    width: 15rem;
-    margin: 2rem;
-    overflow: hidden;
-}
-
-.video-container .video video {
-    height: 100%;
+  .swiper-slide img {
+    display: block;
     width: 100%;
+    height: 100%;
     object-fit: cover;
-    outline: none;
-    border: none;
-    cursor: pointer;
-}
-
-.video-container .video video:hover {
-    transition: .2s linear;
-    transform: scale(1.05);
-} 
-
-.video-container .video .active {
-    background: #000;
-    position: fixed;
-    top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
-    height: auto;
-    width: 20%;
-    z-index: 1;
-}
-
-.video-container .video .active:hover {
-    transition: none;
-    transform: translate(-50%, -50%) scale(1);
-}
+  }
