--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1252,3 +1252,20 @@ section .container {
 }
 
 
+
+.video-container {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  position: relative;
+}
+
+/* Deixa o vídeo responsivo */
+.video-container video {
+  width: 100%;
+  height: auto;
+  display: block;
+  border: none;
+  object-fit: cover; /* ou "contain", dependendo do efeito desejado */
+  background: #000;
+}
